Read translated plugin action label

BUG: 429510